GNOME Bugzilla – Bug 707204
search-provider: fix string comparison
Last modified: 2013-09-01 08:24:07 UTC
See patch
Created attachment 253731 [details] [review] search-provider: fix string comparison Otherwise the provider won't update the string in the shell search overview.
Review of attachment 253731 [details] [review]: Thanks!
Attachment 253731 [details] pushed as 9790726 - search-provider: fix string comparison