search-provider: fix string comparison

Otherwise the provider won't update the string in the shell search
overview.

https://bugzilla.gnome.org/show_bug.cgi?id=707204